--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.2.1",
     "expo": "~52.0.39",
+    "expo-av": "~15.0.2",
+    "expo-file-system": "~18.0.11",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-audio-recorder-player": "^3.6.12",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.0",
     "react-native-reanimated": "~3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
